@@ -153,13 +153,12 @@ private slots:
 	void onEditCurWPolarObject();
 	void onExporttoAVL();
 	void onExporttoSTL();
-	void onExportWPolarToXML();
+	void onExportAnalysisToXML();
 	void onImportSTLFile();
 	void onExportCurPOpp();
 	void onExportCurWPolar();
 	void onExportPlanetoXML();
-	void onImportPlanefromXML();
-	void onImportWPolarFromXML();
+	void onExportWPolars();
 	void onFinCurve();
 	void onGL3DScale();
 	void onHideAllWOpps();
@@ -167,9 +166,11 @@ private slots:
 	void onHideAllWPolars();
 	void onHidePlaneOpps();
 	void onHidePlaneWPolars();
-	void onInitLLTCalc();
 	void onImportFromXml();
-	void onImportWPolar();
+	void onImportPlanesfromXML();
+	void onImportAnalysisFromXML();
+	void onImportWPolars();
+	void onInitLLTCalc();
 	void onKeepCpSection();
 	void onManagePlanes();
 	void onModalView();
